--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.7.2-2ubuntu1) UNRELEASED; urgency=low
+xorg-server (2:1.7.2-2ubuntu1) lucid; urgency=low
 
   * Merge from Debian experimental. Remaining Ubuntu changes:
     - debian/rules, debian/control:
@@ -72,7 +72,7 @@ xorg-server (2:1.7.2-2ubuntu1) UNRELEASED; urgency=low
     until we have it.
   * rules, local/64-xorg-xkb.rules: Use input_id from udev.
 
- -- Bryce Harrington <bryce@ubuntu.com>  Thu, 03 Dec 2009 15:03:34 -0800
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Mon, 07 Dec 2009 15:30:18 +0200
 
 xorg-server (2:1.7.2-2) experimental; urgency=low
 
