--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xorg-server (2:1.7.2-2ubuntu2) lucid; urgency=low
+
+  * local/64-xorg-xkb.rules: Use "program" instead of "file" when
+    grepping the XKB settings from console-setup.
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 08 Dec 2009 13:17:04 +0200
+
 xorg-server (2:1.7.2-2ubuntu1) lucid; urgency=low
 
   * Merge from Debian experimental. Remaining Ubuntu changes:
