--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xorg-server (2:1.7.3.901-1ubuntu3) karmic; urgency=low
+
+  * Update 100_rethrow_signals.patch to work with xserver 1.7
+
+ -- Bryce Harrington <bryce@ubuntu.com>  Tue, 15 Dec 2009 15:00:08 -0800
+
 xorg-server (2:1.7.3.901-1ubuntu2) lucid; urgency=low
 
   [ Alberto Milone ]
