--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+xorg-server (2:1.7.3.901-1ubuntu4) lucid; urgency=low
+
+  * xvfb: Depend again on xauth. Depend on x11-xkb-utils. LP: #500102.
+
+ -- Matthias Klose <doko@ubuntu.com>  Thu, 24 Dec 2009 12:20:02 +0100
+
 xorg-server (2:1.7.3.901-1ubuntu3) lucid; urgency=low
 
   * Update 100_rethrow_signals.patch to work with xserver 1.7
