--- a/changelog
+++ b/changelog
@@ -2,7 +2,8 @@ xorg-server (2:1.7.3.901-1ubuntu5) lucid; urgency=low
 
   * Use alternatives to make it easier to switch between X11 and 3rd
     party modules.
-  * Add link to /usr/lib/XvMCConfig and use it for alternatives.
+  * Add link to /usr/lib/xvmcconfig-standard/XvMCConfig and use it
+    for alternatives.
 
  -- Alberto Milone <alberto.milone@canonical.com>  Mon, 04 Jan 2010 12:08:17 +0100
 
