--- a/debian/changelog
+++ b/debian/changelog
@@ -5,13 +5,14 @@ xorg-server (2:1.7.3.902-1ubuntu1) UNRELEASED; urgency=low
 
   [ Michael Vogt ]
   * Add 101_nv-crash-fix.diff: Do not crash if gamma_set is NULL.
-
+    (LP: #494627)
+  
   [ Alberto Milone ]
   * Install libglx.so and libdri.so in /usr/lib/standard-x11 as X
     seems to prefer the file in /usr/lib/xorg/modules/extensions/standard/
     over links in /usr/lib/xorg/modules/extensions/.
 
- -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 07 Jan 2010 21:52:12 +0200
+ -- Bryce Harrington <bryce@ubuntu.com>  Thu, 07 Jan 2010 17:01:50 -0800
 
 xorg-server (2:1.7.3.902-1) unstable; urgency=low
 
