--- a/changelog
+++ b/changelog
@@ -1,8 +1,19 @@
+xorg-server (2:1.7.4-2ubuntu2) karmic; urgency=low
+
+  
+
+ -- Bryce Harrington <bryce@ubuntu.com>  Mon, 08 Feb 2010 19:31:15 -0800
+
 xorg-server (2:1.7.4-2ubuntu1) UNRELEASED; urgency=low
 
+  [Timo Aaltonen]
   * Merge from Debian unstable.
   * Drop patch 101, included in Debian.
 
+  [Robert Collins]
+  * Add 199_xfvb-help-typo.patch to fix typo in help for xvfb (fdo #32990)
+  * Add 200_randr-null.patch to clarify a pointer initialization (fdo #26389)
+  
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 05 Feb 2010 16:14:37 +0200
 
 xorg-server (2:1.7.4-2) unstable; urgency=low
