--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 xorg-server (2:1.7.4-2ubuntu1) UNRELEASED; urgency=low
 
+  [Robert Hooker]
+  * Add 106_nouveau_autodetect.patch: makes nouveau the default driver
+    for supported cards when not explicitly named in xorg.conf.
+
   [Timo Aaltonen]
   * Merge from Debian unstable.
   * Drop patch 101, included in Debian.
@@ -8,7 +12,7 @@ xorg-server (2:1.7.4-2ubuntu1) UNRELEASED; urgency=low
   * Add 199_xfvb-help-typo.patch to fix typo in help for xvfb (fdo #32990)
   * Add 200_randr-null.patch to clarify a pointer initialization (fdo #26389)
   
- -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 05 Feb 2010 16:14:37 +0200
+ -- Bryce Harrington <bryce@ubuntu.com>  Tue, 16 Feb 2010 21:03:35 -0800
 
 xorg-server (2:1.7.4-2) unstable; urgency=low
 
