--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-xorg-server (2:1.7.5-1ubuntu1) UNRELEASED; urgency=low
+xorg-server (2:1.7.5-1ubuntu1) lucid; urgency=low
 
+  [ Bryce Harrington ]
   [Robert Hooker]
   * Add 106_nouveau_autodetect.patch: makes nouveau the default driver
     for supported cards when not explicitly named in xorg.conf.
@@ -12,7 +13,7 @@ xorg-server (2:1.7.5-1ubuntu1) UNRELEASED; urgency=low
   * Add 199_xfvb-help-typo.patch to fix typo in help for xvfb (fdo #32990)
   * Add 200_randr-null.patch to clarify a pointer initialization (fdo #26389)
   
- -- Bryce Harrington <bryce@ubuntu.com>  Tue, 16 Feb 2010 21:03:35 -0800
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Fri, 19 Feb 2010 13:24:15 +0200
 
 xorg-server (2:1.7.5-1) unstable; urgency=low
 
