--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+xorg-server (2:1.7.6-1ubuntu1) UNRELEASED; urgency=low
+
+  * Merge from Debian unstable.
+  * Drop patch 107, included in Debian.
+  * Drop patch 108, included upstream.
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 23 Mar 2010 23:43:55 +0200
+
 xorg-server (2:1.7.6-1) unstable; urgency=low
 
   [ Brice Goglin ]
