--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
 xorg-server (2:1.7.6-1ubuntu1) UNRELEASED; urgency=low
 
+  [Timo Aaltonen]
   * Merge from Debian unstable.
   * Drop patch 107, included in Debian.
   * Drop patch 108, included upstream.
   * control: Drop the udeb, we don't need it for lucid.
   * control: Relax/drop some build-deps caused by the udeb.
+
+  [Bryce Harrington]
+  * Add 110_findglyphbyhash-fix.patch from upstream to fix a sporadic
+    crash in FindGlyphByHash.
+    (LP: #401045)
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 23 Mar 2010 23:43:55 +0200
 
