--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.7.6-1ubuntu1) UNRELEASED; urgency=low
+xorg-server (2:1.7.6-1ubuntu1) lucid; urgency=low
 
   [Timo Aaltonen]
   * Merge from Debian unstable.
