--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.7.6-1ubuntu1) UNRELEASED; urgency=low
+xorg-server (2:1.7.6-1ubuntu1) lucid; urgency=low
 
   [Timo Aaltonen]
   * Merge from Debian unstable.
@@ -13,7 +13,7 @@ xorg-server (2:1.7.6-1ubuntu1) UNRELEASED; urgency=low
     (LP: #401045)
   * Renumber patch 201_armel-drv-fallbacks.patch to 111
 
- -- Bryce Harrington <bryce@ubuntu.com>  Wed, 24 Mar 2010 11:47:58 -0700
+ -- Bryce Harrington <bryce@ubuntu.com>  Wed, 24 Mar 2010 12:04:20 -0700
 
 xorg-server (2:1.7.6-1) unstable; urgency=low
 
