--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-xorg-server (2:1.7.6-1ubuntu3) karmic; urgency=low
+xorg-server (2:1.7.6-1ubuntu3) lucid; urgency=low
 
   * Extend 112_xaa-fbcomposite-fix-negative-size.patch to also correct a
     mod() definition in the mi code which suffers the same flaw.
 
- -- Bryce Harrington <bryce@ubuntu.com>  Mon, 29 Mar 2010 14:07:08 -0700
+ -- Bryce Harrington <bryce@ubuntu.com>  Mon, 29 Mar 2010 14:15:07 -0700
 
 xorg-server (2:1.7.6-1ubuntu2) lucid; urgency=low
 
