--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+xorg-server (2:1.7.6-1ubuntu4) UNRELEASED; urgency=low
+
+  [ Timo Aaltonen ]
+  * Merge from debian-unstable git.
+
+  [ Michael Casadevall ]
+  * Updated 111_armel-drv-fallbacks.patch to also add support for finding
+    dovefb devices in addition to imx51 ones.
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 30 Mar 2010 18:37:06 +0300
+
 xorg-server (2:1.7.6-2) UNRELEASED; urgency=low
 
   [ Timo Aaltonen ]
