--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+xorg-server (2:1.7.6-2ubuntu6) lucid; urgency=low
+
+  * Add 122_xext_fix_card32_overflow_in_xauth.patch:  Prevent overflow 
+    of a CARD32 variable millis by doing bounds checking.  This is a 
+    patch currently in discussion at fdo #27134, so this patch can be
+    dropped in favor of whatever upstream decides to include.
+    (LP: #519049)
+
+ -- Bryce Harrington <bryce@ubuntu.com>  Thu, 15 Apr 2010 14:02:00 -0700
+
 xorg-server (2:1.7.6-2ubuntu5) lucid; urgency=low
 
   * Update patches in previous upload to fix FTBS issue.
