--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xorg-server (2:1.7.6-2ubuntu7) UNRELEASED; urgency=low
+
+  * Drop 117_fix_crash_with_createglyphset.patch - dupe of patch 110
+
+ -- Bryce Harrington <bryce@ubuntu.com>  Fri, 16 Apr 2010 09:34:39 -0700
+
 xorg-server (2:1.7.6-2ubuntu6) lucid; urgency=low
 
   * Add 122_xext_fix_card32_overflow_in_xauth.patch:  Prevent overflow 
